feat: add solutions to lc problem: No.2502 (#4107)
No.2502.Design Memory Allocator