@@ -24,9 +24,9 @@ class Allocator {
         return -1;
     }
 
-    public int free(int mID) {
+    public int freeMemory(int mID) {
         int ans = 0;
-        for (int s : d.getOrDefault(mID, Collections.emptyList())) {
+        for (int s : d.getOrDefault(mID, List.of())) {
             int e = tm.remove(s);
             ans += e - s + 1;
         }
@@ -39,5 +39,5 @@ class Allocator {
  * Your Allocator object will be instantiated and called as such:
  * Allocator obj = new Allocator(n);
  * int param_1 = obj.allocate(size,mID);
- * int param_2 = obj.free(mID);
+ * int param_2 = obj.freeMemory(mID);
  */
